[gd_scene load_steps=7 format=3 uid="uid://dpg11miv8aygh"]

[ext_resource type="Texture2D" uid="uid://nnnqpxm5he08" path="res://Assets/ButtonTexture/buton_big_main.png" id="1_61ogl"]
[ext_resource type="Script" uid="uid://58mwf2dkkj18" path="res://Scenes/home_container.gd" id="1_uiowc"]
[ext_resource type="PackedScene" uid="uid://bjwdx0d0mmrww" path="res://Scenes/weather_card.tscn" id="2_uiowc"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="3_661as"]
[ext_resource type="PackedScene" uid="uid://eoixy2lyy743" path="res://Scenes/quick_actions_card.tscn" id="3_ghbwx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ac43"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28
shadow_color = Color(0, 0, 0, 0.192157)
shadow_size = 30
shadow_offset = Vector2(0, 5)

[node name="HomeContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(650, 992)
anchors_preset = -1
anchor_right = 0.902778
anchor_bottom = 1.63125
offset_right = -650.0
offset_bottom = -2088.0
size_flags_vertical = 3
script = ExtResource("1_uiowc")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Panel" type="Panel" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8ac43")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/VBoxContainer/Panel"]
self_modulate = Color(0.796243, 0.796243, 0.796243, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_61ogl")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GreetingsLabel" type="Label" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(602, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_661as")
theme_override_font_sizes/font_size = 36
text = "Hello Mary Ann!"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer/VBoxContainer/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(0, 130)
layout_mode = 2

[node name="GreetingQuote" type="Label" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(602, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_661as")
theme_override_font_sizes/font_size = 24
text = "Hello Mary Ann"
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/Panel/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="WeatherCard" parent="VBoxContainer2/VBoxContainer" instance=ExtResource("2_uiowc")]
layout_mode = 2

[node name="QuickActionsCard" parent="VBoxContainer2/VBoxContainer" instance=ExtResource("3_ghbwx")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="forecast_button_pressed" from="VBoxContainer2/VBoxContainer/WeatherCard" to="." method="_on_weather_card_forecast_button_pressed"]
